[Add] New version of recommendation, fix word2vec and .gitignore

--- a/SYMA_word2vec.ipynb
+++ b/SYMA_word2vec.ipynb
@@ -8250,8 +8250,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "2bb8f451",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "72f87f04b2fd43379acce31edf75894b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [1, 2, 3, 4]\n",
+    "for i in tqdm(test):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ba6e6271",
+   "id": "43bdfbac",
    "metadata": {},
    "outputs": [],
    "source": []
